discussion/kv_engine/157582/157582_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47308: Use MemoryDomain::Secondary for libmagma

Create a proxy class that MagmaKVStore will use for accessing the real
Magma. The proxy class will ensure that the Secondary domain is
selected as we call into libmagma.

In this first patch not all function calls are executing in the
secondary domain as further work is required to ensure any heap memory
returned from the library is freed in the correct domain.

Change-Id: I42c955317670f822e1be080102053c97973fde95

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-07-19 08:42:19.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-19 09:05:22.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37809/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc(1867): error C2664: "magma::Status MagmaMemoryTrackingProxy::GetLocal(magma::Magma::Snapshot &,const magma::Slice &,std::string &,bool &)": cannot convert argument 1 from "Vbid::id_type" to "magma::Magma::Snapshot &" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37809/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10650/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26: error: no matching member function for call to "GetLocal" [clang-diagnostic-error]
    auto status = magma->GetLocal(vbid.get(), keySlice, valSlice, found);
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-memory-tracking-proxy.h:94:19: note: candidate function not viable: no known conversion from "Vbid::id_type" (aka "unsigned short") to "magma::Magma::Snapshot &" for 1st argument
    magma::Status GetLocal(magma::Magma::Snapshot& snapshot,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-memory-tracking-proxy.h:88:19: note: candidate function not viable: requires 5 arguments, but 4 were provided
    magma::Status GetLocal(const magma::Magma::KVStoreID kvID,
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10650/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26:
error: no matching member function for call to "GetLocal" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10650/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32248/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26:
error: no matching member function for call to "GetLocal"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32248/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/262/ : FAILURE

Compile error at [2021-07-19T08:57:34.311Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26:
error: no matching member function for call to "GetLocal"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/262/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12405/ : FAILURE

Compile error at [2021-07-19T08:58:02.007Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:72:
error: no matching function for call to ?MagmaMemoryTrackingProxy::GetLocal(Vbid::id_type, const magma::Slice&, magma::Slice&, bool&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12405/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12748/ : FAILURE

Compile error at [2021-07-19T09:00:13.737Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26:
error: no matching member function for call to "GetLocal"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11320/ : FAILURE

Compile error at [2021-07-19T08:45:50.218Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26:
error: no matching member function for call to "GetLocal"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11320/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20301/ : FAILURE

Compile error at [2021-07-19T09:02:59.816Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:26:
error: no matching member function for call to "GetLocal"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20301/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9307/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12233/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/237/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
